# se-toolkit-lab-7

./: .env.docker.example  README.md  docker-compose.yml
bot/: Dockerfile  PLAN.md  README.md  bot.py  pyproject.toml
bot/handlers/: __init__.py
bot/handlers/slash/: __init__.py  commands.py  intent_router.py
bot/lms_bot/: __init__.py  bot.py  config.py
bot/services/: __init__.py  api_client.py  llm_client.py
instructors/context/conventions/: common.md
instructors/file-reviews/lab/tasks/required/: task-1.md
lab/tasks/required/: task-1.md
